--- a/index.html
+++ b/index.html
@@ -13,6 +13,40 @@
 <h3>Email: horenstein.sofia@gmail.com</h3>
 <h3>Github: https://github.com/sofiahorenstein</h3>
 <h3>LinkedIn: https://www.linkedin.com/in/sofia-horenstein-4a1131a7/</h3>
+
+<table border="1">
+        <thead>
+          <tr>
+            <th>Books</th>
+            <th>Movies</th>
+            <th>Games</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>The Glass Castle</td>
+            <td>Napoleon Dynamite</td>
+            <td>Skyrim</td>
+          </tr>
+          <tr>
+            <td>The Lovely Bonest</td>
+            <td>Forest Gump</td>
+            <td>animal crossing</td>
+          </tr>
+          <tr>
+            <td>Harry Potter & the goblet of fire</td>
+            <td>Coraline</td>
+            <td>cooking mama</td>
+          </tr>
+        </tbody>
+      </table>
+
+
+
+
+
+
+
 </body>
 </html>
 
