--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
             <td>Skyrim</td>
           </tr>
           <tr>
-            <td>The Lovely Bonest</td>
+            <td>The Lovely Bones</td>
             <td>Forest Gump</td>
-            <td>animal crossing</td>
+            <td>Animal Crossing</td>
           </tr>
           <tr>
-            <td>Harry Potter & the goblet of fire</td>
+            <td>Harry Potter & The Goblet of Fire</td>
             <td>Coraline</td>
-            <td>cooking mama</td>
+            <td>Cooking mama</td>
           </tr>
         </tbody>
       </table>
