--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Activity 1: Basic HTML Bio</title>
 </head>
 <body>
-<a target="_blank" href="web_2/sofiahorenstein.github.io/applepicking.jpg">
-<img src= "web_2/sofiahorenstein.github.io/applepicking.jpg" alt="pic">
+<a target="_blank" href="applepicking.jpg">
+<img src= "applepicking.jpg" width="200" height="240" alt="pic">
 </a>
 
 <h1>Sofia Horenstein</h1>
